--- a/app/src/main/res/layout/activity_team.xml
+++ b/app/src/main/res/layout/activity_team.xml
@@ -131,7 +131,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:layout_marginEnd="@dimen/_10sdp"
-                android:layout_marginBottom="@dimen/_14ssp"
+                android:layout_marginBottom="@dimen/_12ssp"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
@@ -151,11 +151,17 @@
                     android:textSize="@dimen/_11ssp" />
             </LinearLayout>
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_1sdp"
+                android:background="@color/viewcolor"
+                android:layout_marginBottom="@dimen/_2sdp"/>
+
             <ScrollView
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:scrollbars="none"
-                android:fillViewport="true">
+                android:fillViewport="true"
+                android:scrollbars="none">
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rvTeam"
