--- a/app/src/main/res/layout/activity_reserve_details.xml
+++ b/app/src/main/res/layout/activity_reserve_details.xml
@@ -42,9 +42,10 @@
             android:textSize="@dimen/_16ssp" />
     </LinearLayout>
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fillViewport="true"
         android:scrollbars="none">
 
         <LinearLayout
@@ -83,9 +84,10 @@
                         android:visibility="visible" />
 
                     <TextView
-                        android:id="@+id/tvreserveID"
+                        android:id="@+id/tvReserveID"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_3sdp"
                         android:layout_gravity="center"
                         android:fontFamily="@font/opensans_regular"
                         android:text=" [#ID]"
@@ -250,6 +252,7 @@
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/onHoldCV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_11sdp"
@@ -274,70 +277,25 @@
                         android:layout_marginTop="@dimen/_21sdp"
                         android:fontFamily="@font/opensans_semibold"
                         android:gravity="center"
-                        android:text="Reserve Is Still Being Held"
+                        android:text="@string/being_held"
                         android:textColor="@color/primary_black"
                         android:textSize="@dimen/_12ssp" />
-
-                    <LinearLayout
+                    <TextView
+                        android:id="@+id/onHoldAmtTV"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/_9sdp"
                         android:gravity="center"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/opensans_regular"
-                            android:text="Release Scheduled for "
-                            android:textColor="@color/dark_grey"
-                            android:textSize="@dimen/_11ssp" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/opensans_bold"
-                            android:text="12/24/2020 "
-                            android:textColor="@color/primary_black"
-                            android:textSize="@dimen/_11ssp" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/opensans_regular"
-                            android:text="for the"
-                            android:textColor="@color/dark_grey"
-                            android:textSize="@dimen/_11ssp" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/opensans_regular"
-                            android:text="amount of"
-                            android:textColor="@color/dark_grey"
-                            android:textSize="@dimen/_11ssp" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/opensans_bold"
-                            android:text=" 6435.21 CYN."
-                            android:textColor="@color/primary_black"
-                            android:textSize="@dimen/_11ssp" />
-
-                    </LinearLayout>
+                        android:layout_marginHorizontal="@dimen/_11sdp"
+                        android:fontFamily="@font/opensans_regular"
+                        android:text="@string/release_scheduled_for"
+                        android:textColor="@color/dark_grey"
+                        android:textSize="@dimen/_11ssp" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/detailsCV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_11sdp"
@@ -356,8 +314,7 @@
                     android:layout_marginBottom="@dimen/_25sdp"
                     android:background="@color/white"
                     android:gravity="center"
-                    android:orientation="vertical"
-                    android:paddingBottom="@dimen/_20sdp">
+                    android:orientation="vertical">
 
                     <TextView
                         android:layout_width="match_parent"
@@ -377,7 +334,7 @@
                         android:fontFamily="@font/opensans_regular"
                         android:gravity="center_horizontal"
                         android:lineSpacingExtra="@dimen/_3ssp"
-                        android:text="@string/canceled_description"
+                        android:text="@string/reserve_canceled_description"
                         android:textColor="@color/dark_grey"
                         android:textSize="@dimen/_11ssp" />
 
@@ -385,6 +342,7 @@
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/releasedCV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_11sdp"
@@ -564,10 +522,6 @@
                         android:textSize="@dimen/_10ssp" />
                 </LinearLayout>
 
-                <androidx.core.widget.NestedScrollView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" >
-
                     <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -580,7 +534,6 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/_8sdp"
                             android:orientation="vertical">
 
                             <androidx.recyclerview.widget.RecyclerView
@@ -596,11 +549,9 @@
                         </LinearLayout>
                     </androidx.cardview.widget.CardView>
 
-                </androidx.core.widget.NestedScrollView>
-
             </LinearLayout>
         </LinearLayout>
 
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 
 </LinearLayout>
